# ImProver

./: .gitignore  Compfiles_rest.json  Examples.lean  MIL_errors.json  MIL_errors_rest.json  MIL_rest.json  README.md  TrainingData.lean  all_tactics.in  analyze.py  baseline_data.csv  benchmark_results.csv  cmd.in  compfiles_errors  compfiles_errors2.json  compfiles_errors3.json  compfiles_errors4.json  compfiles_errors5.json  data.csv  data.txt  demo.py  demo_eq.py  equational_confl3_results.csv  file_data.csv  lake-manifest.json  lakefile.lean  method_data.csv  metrics_data_new.csv  output.txt  pyproject.toml  rag_data.csv  read.py  readability.csv  repository_data.csv  requirements.txt  temp.in  temp.json  temp.lean  temp.py  temp2.in  (+82 more)
Test3-basic/: file_data.csv  repository_data.csv  theorem_data.csv
Tests3-best3/: file_data.csv  repository_data.csv  theorem_data.csv
Tests3-best5/: file_data.csv  repository_data.csv  theorem_data.csv
Tests3-refinement3/: file_data.csv  repository_data.csv  theorem_data.csv
Tests3-refinement5/: file_data.csv  repository_data.csv  theorem_data.csv
TrainingData/: Frontend.lean  TreeParser.lean
benchmark/: compfilesMIL.txt  extract.py  fix_csv.py  formalization_test.json  key_test.py  mathlib_comp.txt  remetrize.py  temp.lean  temp.py  tools.py
configs/: config.json  config_FLTreg.json  config_MIL.json  config_MIL_local.json  config_MIL_local2.json  config_PFR.json  config_PNT.json  config_all.json  config_carleson.json  config_comp.json  config_eq.json  config_hep.json  config_htpi.json  config_knot.json  config_mathlib.json  (+6 more)
(+371 files in other folders)
