[project]
name = "improver"
version = "0.1.0"
description = "Agent-based Proof Optimization"
authors = [
    {name = "riyazahuja",email = "riyaza@andrew.cmu.edu"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
]

[tool.poetry]
name = "improver"
version = "0.1.0"


[tool.poetry.dependencies]
python = "^3.11"
pantograph = { file = "/Users/ahuja/Desktop/PyPantograph/dist/pantograph-0.2.25-cp313-cp313-macosx_15_0_arm64.whl" }


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
